header banner about

--- a/index.html
+++ b/index.html
@@ -3,9 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css" integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <title>Boostfolia</title>
 </head>
 <body>
-    sdfdsf
+    <header>
+        <div class="wrapper">
+            <div class="head">
+                <img src="img/header_menu/Logo.png" alt="Logo" class="logo">
+                <nav class="menu">
+                    <div class="menu-btn">
+                        <div class="mbtn"></div>
+                    </div>
+                </nav>
+            </div>
+        </div>
+        <div class="banner">
+            <div class="wrapper">
+                <h1 class="main-title">
+                    We think creative be creative
+                </h1>
+                <p class="main-subtitle">Like to do creative works</p>
+                <img src="img/header_menu/mouse.png" alt="mouse" class="mouse">
+                <span>scroll down</span>
+            </div>
+        </div>
+    </header>
+
+    <section class="about">
+        <div class="wrapper">
+            <div class="title">
+                <h3 class="title__main">about us</h3>
+                <p class="title__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum hic ex repellat ducimus minima quod ab ipsa itaque nesciunt. Consectetur.</p>
+            </div>
+            <div class="about-cards">
+                <div class="about-cards__item">
+                    <img src="img/about_us/1.png" alt="card_img" class="about-cards__item_img">
+                    <p class="about-cards__item_title">Crative design</p>
+                    <p class="about-cards__item_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do . . .</p>
+                </div>
+                <div class="about-cards__item">
+                    <img src="img/about_us/2.png" alt="card_img" class="about-cards__item_img">
+                    <p class="about-cards__item_title">Uniqu portfolio</p>
+                    <p class="about-cards__item_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do . . .</p>
+                </div>
+                <div class="about-cards__item">
+                    <img src="img/about_us/3.png" alt="card_img" class="about-cards__item_img">
+                    <p class="about-cards__item_title">Infinite updates</p>
+                    <p class="about-cards__item_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do . . .</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="watch">
+        <div class="wrapper">
+            <div class="watch-wp">
+                <div class="watch__info">
+                    <h4 class="watch__info_title">watch behind the scene</h4>
+                    <p class="watch__info_text">Lorem ipsum dolo the lorem r sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
+                    <a href="#" class="watch__info_btn">play now</a>
+                </div>
+                <div class="watch__vibeo">
+                    <img src="img/watch/bg.png" alt="video">
+                    <img src="img/watch/3.png" alt="tr" class="tr">
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
-</html>
+</html> 
